updates up to message sending
