# doc/api.yaml
@@ -27,6 +27,9 @@ tags:
   - name: groups
     description: |
       Group related operations
+  - name: media
+    description: |
+      Media retrieval operation
 paths: 
   /session:
     post:
@@ -797,8 +800,7 @@ paths:
       summary: Send a message
       description: |
         Allows a user to send a new message in a specific conversation. The message can be either
-        text or a photo. For photo messages, the content should be the photo identifier obtained
-        from a separate photo upload endpoint.
+        text or a photo.
       operationId: sendMessage
       security:
         - UserIdentifierAuth: []
@@ -815,16 +817,15 @@ paths:
               properties:
                 type:
                   type: string
-                  enum: [text, photo]
-                  description: Type of the message (text or photo)
+                  enum: [text]
+                  description: Type of the message (text)
                   example: "text"
                   minLength: 4
-                  maxLength: 5
+                  maxLength: 4
                 content:
                   type: string
                   description: |
-                    The content of the message. For text messages, this is the actual text.
-                    For photo messages, this should be the photo identifier.
+                    The content of the message. 
                   pattern: '^.{1,1000}$'
                   minLength: 1
                   maxLength: 1000
@@ -832,6 +833,30 @@ paths:
               required:
                 - content
                 - type
+          multipart/form-data:
+            schema: 
+              type: object
+              description: |
+                Message details for photo messages
+              properties: 
+                type: 
+                  type: string
+                  enum: [photo]
+                  description: |
+                    Type of message.
+                  example: "photo"
+                  minLength: 5
+                  maxLength: 5
+                photo: 
+                  type: string
+                  format: binary
+                  description: |
+                    The photo file to upload
+                  minLength: 100
+                  maxLength: 10485760 
+              required: 
+                - type
+                - photo
       responses:
         "201":
           description: |
@@ -885,11 +910,19 @@ paths:
                     description: |
                       Content of the message:
                       - For `text`, this is the actual message text.
-                      - For `photo`, this is the photo.
-                    pattern: '^.{1,1000}$'
+                      - For `photo`, this is a URL to fetch the actual photo data.
+                    pattern: "^[\\s\\S]*$"
                     minLength: 1
-                    maxLength: 1000
+                    maxLength: 14000000
                     example: "Hi, how are you doing today?"
+                  contentType: 
+                    type: string
+                    description: |
+                      This is the MIME type of content.
+                    pattern: '^[a-zA-Z0-9.+-]+/[a-zA-Z0-9.+-]+$'
+                    example: "image/jpeg"
+                    minLength: 8
+                    maxLength: 100
                   type:
                     type: string
                     enum: [text, photo]
@@ -918,6 +951,62 @@ paths:
         "401": { $ref: "#/components/responses/Unauthorized" }
         "404": { $ref: "#/components/responses/ConversationNotFound" }
         "413": { $ref: "#/components/responses/PayloadTooLarge" }
+        "500": { $ref: "#/components/responses/InternalServerError" }
+  /media/{mediaId}:
+    parameters: 
+      - name: mediaId
+        in: path
+        required: true
+        schema: 
+          type: string
+          description:  |
+            Unique identifier of the media file
+          pattern: '^media[0-9]+$'
+          minLength: 10
+          maxLength: 30
+          example: "media1678906718"
+    get: 
+      tags: ["media"]
+      summary: Get media file
+      description: |
+        Retrieves a media file by ID. Used to fetch binary data of media files in messages.
+      operationId: getMedia
+      security: 
+        - UserIdentifierAuth: []
+      responses: 
+        "200": 
+          description: |
+            Media file retrieved successfully
+          content: 
+            image/*:
+              schema:
+                type: string
+                format: binary
+                description: |
+                  The binary data of the requested media file
+                minLength: 100
+                maxLength: 10485760
+                example: "[binary data]"
+        "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/Unauthorized" }
+        "404":
+          description: |
+            Media file not found
+          content:
+            application/json:
+              schema:
+                description: |
+                  Media not found error
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: |
+                      Error message
+                    example: "Media file not found"
+                    pattern: '^[a-zA-Z0-9_ ]{10,100}$'
+                    minLength: 10
+                    maxLength: 100
         "500": { $ref: "#/components/responses/InternalServerError" }
   /messages/{messageId}:
     parameters:
